--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>Im Daniel.</h1>
-        <p>a <span class="pro">pro</span>grammer.</p>
+        <h2>a <span class="pro">pro</span>grammer.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div> 
@@ -24,13 +24,17 @@
             
             <iframe src="https://giphy.com/embed/aY1HMl4E1Ju1y" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen>
             </iframe>
+
+            <!--
+
             <p>
                 <a href="https://giphy.com/gifs/naruto-shippuden-kakashi-aY1HMl4E1Ju1y">via GIPHY
                 </a>
             </p>
 
-
           <img src="" alt="Profile Photo">
+
+            -->
 
           <h2>Hello.</h2>
           <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
@@ -39,14 +43,18 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img src="images/skills1.jpg" alt="skill number one" width="200" height="200">
+            <img class="code-img" src="images/skills1.jpg" alt="skill number one" width="200" height="200">
+
             <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <p class="code-skill-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+
           </div>
           <div class="skill-row">
-            <img src="images/skills2.jpg" alt="skill number three" width="200" height="200">
+            <img class="chilli-img" src="images/skills2.jpg" alt="skill number three" width="200" height="200">
+
             <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <p class="chilli-skill-description">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+
           </div>
         </div>
         <hr>
