final commits. tutorial finished

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             -->
 
           <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
         </div>
         <hr>
         <div class="skills">
@@ -71,7 +71,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/daniel-ebron/">LinkedIn</a>
         <a class="footer-link" href="https://github.com/Dallas-Alfonso">Github</a>
         <a class="footer-link" href="https://www.danielebron.com/">Website</a>
-        <p>© 2020 Daniel Ebron.</p>
+        <p class="copyright">© 2020 Daniel Ebron.</p>
       </div>
       
 </body>
